--- a/src/main/resources/weather_application.fxml
+++ b/src/main/resources/weather_application.fxml
@@ -12,8 +12,8 @@
 <GridPane xmlns="http://javafx.com/javafx"
           fx:controller="yahav.openweathermap.OpenWeatherMapController"
           xmlns:fx="http://javafx.com/fxml"
-          prefHeight="600.0" prefWidth="550.0" hgap="6" vgap="6"
-          style="-fx-background-color: lightskyblue;" alignment="CENTER">
+          prefHeight="850.0" prefWidth="800.0" hgap="6" vgap="6"
+          style="-fx-background-color: lightskyblue;" >
     <padding><Insets top="10" right="10" bottom="10" left="10"/></padding>
 
         <Label text="Location:"
@@ -25,42 +25,27 @@
         <ToggleButton fx:id="submitButton" onMouseClicked="#onSubmit" text= "Submit"
                       GridPane.columnIndex="18" GridPane.rowIndex="1"/>
 
-    <Label fx:id="weatherForecast" GridPane.columnIndex="2" GridPane.rowIndex="1" />
-    <Label fx:id="currentWeather" GridPane.columnIndex="4" GridPane.rowIndex="2" />
-    <ImageView fx:id="currentIconImage" GridPane.columnIndex="6" GridPane.rowIndex="3" GridPane.columnSpan="2"/>
+    <Label fx:id="weatherForecast" GridPane.columnIndex="2" GridPane.rowIndex="2"/>
+    <Label fx:id="currentWeather" GridPane.columnIndex="5" GridPane.rowIndex="2"/>
+    <ImageView fx:id="currentIconImage" GridPane.columnIndex="10" GridPane.rowIndex="2"/>
 
-    <Label fx:id="day1"  GridPane.columnIndex="2" GridPane.rowIndex="4"
-           GridPane.rowSpan="1" GridPane.columnSpan="1"/>
-    <Label fx:id="day2"  GridPane.columnIndex="2" GridPane.rowIndex="6"
-           GridPane.rowSpan="1" GridPane.columnSpan="1"/>
-    <Label fx:id="day3"  GridPane.columnIndex="2" GridPane.rowIndex="8"
-           GridPane.rowSpan="1" GridPane.columnSpan="1"/>
-    <Label fx:id="day4" GridPane.columnIndex="2" GridPane.rowIndex="10"
-           GridPane.rowSpan="1" GridPane.columnSpan="1"/>
-    <Label fx:id="day5" GridPane.columnIndex="2" GridPane.rowIndex="12"
-           GridPane.rowSpan="1" GridPane.columnSpan="1"/>
+    <Label fx:id="day1"  GridPane.columnIndex="2" GridPane.rowIndex="4"/>
+    <Label fx:id="day2"  GridPane.columnIndex="2" GridPane.rowIndex="6"/>
+    <Label fx:id="day3"  GridPane.columnIndex="2" GridPane.rowIndex="8"/>
+    <Label fx:id="day4" GridPane.columnIndex="2" GridPane.rowIndex="10"/>
+    <Label fx:id="day5" GridPane.columnIndex="2" GridPane.rowIndex="12"/>
 
-    <Label fx:id="day1Temp"  GridPane.columnIndex="5" GridPane.rowIndex="14"
-           GridPane.rowSpan="1" GridPane.columnSpan="1"/>
-    <Label fx:id="day2Temp"  GridPane.columnIndex="5" GridPane.rowIndex="16"
-           GridPane.rowSpan="1" GridPane.columnSpan="1"/>
-    <Label fx:id="day3Temp"  GridPane.columnIndex="5" GridPane.rowIndex="18"
-           GridPane.rowSpan="1" GridPane.columnSpan="1"/>
-    <Label fx:id="day4Temp"  GridPane.columnIndex="5" GridPane.rowIndex="20"
-           GridPane.rowSpan="1" GridPane.columnSpan="1"/>
-    <Label fx:id="day5Temp" GridPane.columnIndex="5" GridPane.rowIndex="22"
-           GridPane.rowSpan="1" GridPane.columnSpan="1"/>
+    <Label fx:id="day1Temp"  GridPane.columnIndex="5" GridPane.rowIndex="4"/>
+    <Label fx:id="day2Temp"  GridPane.columnIndex="5" GridPane.rowIndex="6"/>
+    <Label fx:id="day3Temp"  GridPane.columnIndex="5" GridPane.rowIndex="8"/>
+    <Label fx:id="day4Temp"  GridPane.columnIndex="5" GridPane.rowIndex="10"/>
+    <Label fx:id="day5Temp" GridPane.columnIndex="5" GridPane.rowIndex="12"/>
 
-    <ImageView fx:id="day1Icon" GridPane.columnIndex="10" GridPane.rowIndex="24"
-               GridPane.rowSpan="1" GridPane.columnSpan="1"/>
-    <ImageView fx:id="day2Icon" GridPane.columnIndex="10" GridPane.rowIndex="26"
-               GridPane.rowSpan="1" GridPane.columnSpan="1"/>
-    <ImageView fx:id="day3Icon" GridPane.columnIndex="10" GridPane.rowIndex="28"
-               GridPane.rowSpan="1" GridPane.columnSpan="1"/>
-    <ImageView fx:id="day4Icon" GridPane.columnIndex="10" GridPane.rowIndex="30"
-               GridPane.rowSpan="1" GridPane.columnSpan="1"/>
-    <ImageView fx:id="day5Icon" GridPane.columnIndex="10" GridPane.rowIndex="32"
-               GridPane.rowSpan="1" GridPane.columnSpan="1"/>
+    <ImageView fx:id="day1Icon" GridPane.columnIndex="10" GridPane.rowIndex="4"/>
+    <ImageView fx:id="day2Icon" GridPane.columnIndex="10" GridPane.rowIndex="6"/>
+    <ImageView fx:id="day3Icon" GridPane.columnIndex="10" GridPane.rowIndex="8"/>
+    <ImageView fx:id="day4Icon" GridPane.columnIndex="10" GridPane.rowIndex="10"/>
+    <ImageView fx:id="day5Icon" GridPane.columnIndex="10" GridPane.rowIndex="12"/>
 
     <fx:define>
         <ArrayList fx:id="Icons" >
